@@ -1,5 +1,7 @@
-FROM openjdk:8
+# Use OpenJDK 17 as the base image
+FROM openjdk:17-slim
 
+# Install necessary dependencies
 RUN apt-get update \
     && apt-get install -y \
         curl \
@@ -9,11 +11,21 @@ RUN apt-get update \
         libxtst6 \
         xfonts-75dpi \
         xfonts-base \
-        xz-utils
+        xz-utils \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
+# Optional: Uncomment to install wkhtmltopdf if needed
 #RUN curl "https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6-1/wkhtmltox_0.12.6-1.buster_amd64.deb" -L -o "wkhtmltopdf.deb"
 #RUN dpkg -i wkhtmltopdf.deb
 
+# Copy the application JAR file
 COPY cb-enrollment-service-0.0.1-SNAPSHOT.jar /opt/
+
+# Optional: Define a health check
 #HEALTHCHECK --interval=30s --timeout=30s CMD curl --fail http://localhost:7001/actuator/health || exit 1
-CMD ["/bin/bash", "-c", "java -XX:+PrintFlagsFinal $JAVA_OPTIONS -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -jar /opt/cb-enrollment-service-0.0.1-SNAPSHOT.jar"]
+
+# Set the command to run the Java application
+CMD ["/bin/bash", "-c", "java -XX:+PrintFlagsFinal $JAVA_OPTIONS -XX:+UnlockExperimentalVMOptions -jar /opt/cb-enrollment-service-0.0.1-SNAPSHOT.jar"]
+
+
